[project]
name = "rye-flask"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tomoya999", email = "58502947+tomoya999@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_flask"]

[project.scripts]
main = 'main:main'
